--- a/src/Client/Views/CreateCustomerAccount/CreateCustomerAccount.fxml
+++ b/src/Client/Views/CreateCustomerAccount/CreateCustomerAccount.fxml
@@ -10,14 +10,14 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.CreateCustomerAccount.CreateCustomerAccountViewController">
    <children>
-      <Button layoutX="462.0" layoutY="346.0" mnemonicParsing="false" text="Back to MENU" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="30.0" />
+      <Button onAction="#onMenuButton" layoutX="462.0" layoutY="346.0" mnemonicParsing="false" text="Back to MENU" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="30.0" />
       <Label layoutX="25.0" layoutY="31.0" text="Create a customer account" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="30.0">
          <font>
             <Font name="System Bold" size="17.0" />
          </font>
       </Label>
       <Label layoutX="25.0" layoutY="61.0" text="Enter a full name of a customer:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="60.0" />
-      <Button layoutX="365.0" layoutY="343.0" mnemonicParsing="false" text="Create an account" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="140.0" />
+      <Button onAction="#onCreateButton" layoutX="365.0" layoutY="343.0" mnemonicParsing="false" text="Create an account" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="140.0" />
       <TextField fx:id="firstNameField" layoutX="25.0" layoutY="85.0" prefHeight="27.0" prefWidth="120.0" promptText="Fisrt name" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="85.0" />
       <TextField fx:id="lastNameField" layoutX="150.0" layoutY="85.0" prefHeight="27.0" prefWidth="120.0" promptText="Last name" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="85.0" />
       <Label layoutX="25.0" layoutY="120.0" text="Date of birth:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="120.0" />
@@ -28,11 +28,7 @@
       <TextField fx:id="passwordField" layoutX="321.0" layoutY="85.0" prefHeight="27.0" prefWidth="188.0" promptText="Enter password" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="85.0" />
       <TextField fx:id="rePasswordField" layoutX="321.0" layoutY="124.0" prefHeight="27.0" prefWidth="188.0" promptText="Confirm password" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="120.0" />
       <Label layoutX="321.0" layoutY="183.0" text="Phone number:" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="180.0" />
-      <Text layoutX="321.0" layoutY="165.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Passwords are not the same" wrappingWidth="188.0" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="155.33203125">
-         <font>
-            <Font size="10.0" />
-         </font>
-      </Text>
+      <Label fx:id="passwordCheckLabel" layoutX="320.0" layoutY="150.0" text="Passwords are not the same" AnchorPane.leftAnchor="320.0"
       <TextField fx:id="phoneField" layoutX="321.0" layoutY="200.0" prefHeight="27.0" prefWidth="188.0" promptText=" +45 00 00 00 00" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="205.0" />
       <Label layoutX="27.0" layoutY="239.0" text="Driving license number:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="240.0" />
       <TextField fx:id="drivingLicenseField" layoutX="25.0" layoutY="256.0" prefHeight="27.0" prefWidth="245.0" promptText="XXXXX" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="265.0" />
