--- a/src/Client/Views/ListOfCustomersView/CustomerCellView/CustomerViewCell.fxml
+++ b/src/Client/Views/ListOfCustomersView/CustomerCellView/CustomerViewCell.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.ListOfBookingsView.ListOfBookingsViewController">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.ListOfBookingsView.ListOfBookingsViewController">
    <children>
       <AnchorPane layoutX="-10.0" prefHeight="40.0" prefWidth="69.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -14,7 +14,7 @@
                   <Font size="10.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="1.0" layoutY="18.0" prefHeight="13.0" prefWidth="65.0" text="Name" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+            <Label fx:id="firstNameLabel" alignment="CENTER" layoutX="1.0" layoutY="18.0" prefHeight="13.0" prefWidth="65.0" text="Name" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
       <AnchorPane layoutX="69.0" layoutY="5.0" prefHeight="40.0" prefWidth="69.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="68.125" AnchorPane.topAnchor="0.0">
@@ -24,7 +24,7 @@
                   <Font size="10.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="1.0" layoutY="18.0" prefHeight="13.0" prefWidth="65.0" text="Surname" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+            <Label fx:id="lastNameLabel" alignment="CENTER" layoutX="1.0" layoutY="18.0" prefHeight="13.0" prefWidth="65.0" text="Surname" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
       <AnchorPane layoutX="140.0" layoutY="5.0" prefHeight="40.0" prefWidth="69.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="136.25" AnchorPane.topAnchor="0.0">
@@ -34,7 +34,7 @@
                   <Font size="10.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="1.0" layoutY="18.0" prefHeight="13.0" prefWidth="65.0" text="00/00/0000" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+            <Label fx:id="dateOfBirtLabel" alignment="CENTER" layoutX="1.0" layoutY="18.0" prefHeight="13.0" prefWidth="65.0" text="00/00/0000" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                <font>
                   <Font size="10.0" />
                </font>
@@ -48,7 +48,7 @@
                   <Font size="10.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="1.0" layoutY="18.0" prefHeight="17.0" prefWidth="125.0" text="rent4u@rent4u.com" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+            <Label fx:id="eMailLabel" alignment="CENTER" layoutX="1.0" layoutY="18.0" prefHeight="17.0" prefWidth="125.0" text="rent4u@rent4u.com" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                <font>
                   <Font size="10.0" />
                </font>
@@ -62,7 +62,7 @@
                   <Font size="10.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="1.0" layoutY="18.0" prefHeight="13.0" prefWidth="65.0" text="00 00 00 00" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+            <Label fx:id="phoneLabel" alignment="CENTER" layoutX="1.0" layoutY="18.0" prefHeight="13.0" prefWidth="65.0" text="00 00 00 00" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                <font>
                   <Font size="8.0" />
                </font>
@@ -76,7 +76,7 @@
                   <Font size="10.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="1.0" layoutY="18.0" prefHeight="13.0" prefWidth="65.0" text="00000000" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+            <Label fx:id="drivingLicenseLabel" alignment="CENTER" layoutX="1.0" layoutY="18.0" prefHeight="13.0" prefWidth="65.0" text="00000000" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                <font>
                   <Font size="10.0" />
                </font>
@@ -90,7 +90,7 @@
                   <Font size="10.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="1.0" layoutY="18.0" prefHeight="13.0" prefWidth="65.0" text="000000/0000" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+            <Label fx:id="cprLabel" alignment="CENTER" layoutX="1.0" layoutY="18.0" prefHeight="13.0" prefWidth="65.0" text="000000/0000" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                <font>
                   <Font size="8.0" />
                </font>
