--- a/src/Client/Views/ListOfCustomersView/ListOfCustomersView.fxml
+++ b/src/Client/Views/ListOfCustomersView/ListOfCustomersView.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.ListOfBookingsView.ListOfBookingsViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.ListOfCustomersView.ListOfCustomersViewController">
    <children>
       <Button layoutX="462.0" layoutY="346.0" mnemonicParsing="false" text="Back to MENU" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="30.0" />
       <Label layoutX="25.0" layoutY="31.0" text="All Customers" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="30.0">
@@ -14,7 +14,7 @@
             <Font name="System Bold" size="17.0" />
          </font>
       </Label>
-      <Button layoutX="365.0" layoutY="343.0" mnemonicParsing="false" text="Create Customer" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="140.0" />
-      <ListView layoutX="25.0" layoutY="64.0" prefHeight="274.0" prefWidth="600.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="65.0" />
+      <Button onAction="#onAddCustomerButton" layoutX="365.0" layoutY="343.0" mnemonicParsing="false" text="Create Customer" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="140.0" />
+      <ListView fx:id="listView" layoutX="25.0" layoutY="64.0" prefHeight="274.0" prefWidth="600.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="65.0" />
    </children>
 </AnchorPane>
