--- a/src/Client/Views/MenuForLogInView/MenuForLogInView.fxml
+++ b/src/Client/Views/MenuForLogInView/MenuForLogInView.fxml
@@ -12,8 +12,8 @@
             <Font name="System Bold" size="39.0" />
          </font>
       </Label>
-      <Button fx:id="openLogInForCustomer" layoutX="193.0" layoutY="220.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="217.0" text="Log-in as a Customer" AnchorPane.leftAnchor="193.0" AnchorPane.topAnchor="220.0" />
+      <Button fx:id="openLogInForCustomer" layoutX="193.0" layoutY="220.0" mnemonicParsing="false" onAction="#onLogInForCustomerButton" prefHeight="40.0" prefWidth="217.0" text="Log-in as a Customer" AnchorPane.leftAnchor="193.0" AnchorPane.topAnchor="220.0" />
       <Label alignment="CENTER" layoutX="270.0" layoutY="81.0" prefHeight="40.0" prefWidth="600.0" text="Please select the correct log-in option" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="80.0" />
-      <Button fx:id="openLoginForEmployee" layoutX="192.0" layoutY="160.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="217.0" text="Log-in as an Employee" AnchorPane.leftAnchor="192.0" AnchorPane.topAnchor="160.0" />
+      <Button fx:id="openLoginForEmployee" layoutX="192.0" layoutY="160.0" mnemonicParsing="false" onAction="#onLogInForEmployeeButton" prefHeight="40.0" prefWidth="217.0" text="Log-in as an Employee" AnchorPane.leftAnchor="192.0" AnchorPane.topAnchor="160.0" />
    </children>
 </AnchorPane>
