--- a/src/Client/Views/MenuView/MenuView.fxml
+++ b/src/Client/Views/MenuView/MenuView.fxml
@@ -12,11 +12,13 @@
             <Font name="System Bold" size="39.0" />
          </font>
       </Label>
-      <Button fx:id="openAddVehicleButton" layoutX="192.0" layoutY="113.0" mnemonicParsing="false" onAction="#onAddVehicleButton" prefHeight="40.0" prefWidth="217.0" text="ADD NEW VEHICLE" AnchorPane.leftAnchor="192.0" AnchorPane.topAnchor="120.0" />
+      <Button fx:id="openAddVehicleButton" layoutX="14.0" layoutY="118.0" mnemonicParsing="false" onAction="#onAddVehicleButton" prefHeight="40.0" prefWidth="217.0" text="ADD NEW VEHICLE" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="120.0" />
       <Label alignment="CENTER" layoutX="270.0" layoutY="81.0" text="Welcome..." AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="80.0" />
       <Button fx:id="openLogOutButton" layoutX="238.0" layoutY="359.0" mnemonicParsing="false" onAction="#onLogOutButton" prefHeight="27.0" prefWidth="127.0" text="LOG OUT" AnchorPane.leftAnchor="238.0" AnchorPane.topAnchor="360.0" />
-      <Button fx:id="listOfVehicleButton" layoutX="193.0" layoutY="160.0" mnemonicParsing="false" onAction="#onListOfVehicleButton" prefHeight="40.0" prefWidth="217.0" text="LIST OF ALL VEHICLES" AnchorPane.leftAnchor="192.0" AnchorPane.topAnchor="170.0" />
-      <Button layoutX="193.0" layoutY="210.0" mnemonicParsing="false" onAction="#onAddBookingButton" prefHeight="40.0" prefWidth="217.0" text="ADD NEW BOOKING" AnchorPane.leftAnchor="192.0" AnchorPane.topAnchor="220.0" />
-      <Button layoutX="193.0" layoutY="210.0" mnemonicParsing="false" onAction="#onListOfBookingButton" prefHeight="40.0" prefWidth="217.0" text="LIST OF ALL BOOKINGS" AnchorPane.leftAnchor="192.0" AnchorPane.topAnchor="270.0" />
+      <Button fx:id="listOfVehicleButton" layoutX="14.0" layoutY="169.0" mnemonicParsing="false" onAction="#onListOfVehicleButton" prefHeight="40.0" prefWidth="217.0" text="LIST OF ALL VEHICLES" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="170.0" />
+      <Button layoutX="15.0" layoutY="223.0" mnemonicParsing="false" onAction="#onAddBookingButton" prefHeight="40.0" prefWidth="217.0" text="ADD NEW BOOKING" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="220.0" />
+      <Button layoutX="15.0" layoutY="275.0" mnemonicParsing="false" onAction="#onListOfBookingButton" prefHeight="40.0" prefWidth="217.0" text="LIST OF ALL BOOKINGS" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="270.0" />
+      <Button layoutX="352.0" layoutY="120.0" mnemonicParsing="false" onAction="#onAddNewCustomerButton" prefHeight="40.0" prefWidth="217.0" text="ADD NEW CUSTOMER" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="120.0" />
+      <Button layoutX="362.0" layoutY="130.0" mnemonicParsing="false" onAction="#onListOfAllCustomersButton" prefHeight="40.0" prefWidth="217.0" text="LIST OF ALL CUSTOMERS" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="170.0" />
    </children>
 </AnchorPane>
