--- a/src/Client/Views/LogInForCustomerView/LogInForCustomerView.fxml
+++ b/src/Client/Views/LogInForCustomerView/LogInForCustomerView.fxml
@@ -1,14 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="Client.Views.LogInForCustomerView.LogInForCustomerViewController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.LogInForCustomerView.LogInForCustomerViewController">
+    <children>
+        <Button fx:id="logInButton" layoutX="220.0" layoutY="249.0" mnemonicParsing="false" onAction="#logIn" prefHeight="27.0" prefWidth="161.0" text="LogIn" />
+        <TextField fx:id="passwordField" alignment="CENTER" layoutX="220.0" layoutY="210.0" promptText="Password" />
+        <Label layoutX="237.0" layoutY="81.0" text="Rent4U">
+            <font>
+                <Font name="System Bold" size="39.0" />
+            </font>
+        </Label>
+        <Button layoutX="268.0" layoutY="359.0" mnemonicParsing="false" onAction="#onBackButton" prefHeight="27.0" prefWidth="66.0" text="Back" />
+        <Label layoutX="233.0" layoutY="129.0" text="Log in as a customer">
+            <font>
+                <Font name="System Bold" size="16.0" />
+            </font>
+        </Label>
+        <TextField fx:id="emailField" alignment="CENTER" layoutX="220.0" layoutY="173.0" promptText="E-Mail" />
+        <Label layoutX="187.0" layoutY="301.0" text="Don't you have an account ? Sign up now !" />
+        <Button layoutX="220.0" layoutY="325.0" mnemonicParsing="false" onAction="#signUp" prefHeight="27.0" prefWidth="161.0" text="SignUp" />
+    </children>
 </AnchorPane>
