--- a/src/Client/Views/ListOfVehiclesView/VehicleListView.fxml
+++ b/src/Client/Views/ListOfVehiclesView/VehicleListView.fxml
@@ -2,65 +2,20 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.ListOfVehiclesView.ListOfVehiclesViewController">
-   <children>
-      <Button layoutX="352.0" layoutY="346.0" mnemonicParsing="false" onAction="#onAddVehicleButton" text="Add new vehicle" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="140.0" />
-      <Label layoutX="25.0" layoutY="31.0" text="Vehicles" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="30.0">
-         <font>
-            <Font name="System Bold" size="17.0" />
-         </font>
-      </Label>
-      <TableView fx:id="table" layoutX="-5.0" layoutY="77.0" prefHeight="270.0" prefWidth="586.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="70.0">
-          <columns>
-              <TableColumn prefWidth="80" text="Type">
-                  <cellValueFactory><PropertyValueFactory property="type" />
-                  </cellValueFactory>
-              </TableColumn>
-              <TableColumn prefWidth="80" text="Make">
-                  <cellValueFactory><PropertyValueFactory property="make" />
-                  </cellValueFactory>
-              </TableColumn>
-              <TableColumn prefWidth="80" text="Model">
-                  <cellValueFactory><PropertyValueFactory property="model" />
-                  </cellValueFactory>
-              </TableColumn>
-              <TableColumn prefWidth="80" text="Year">
-                  <cellValueFactory><PropertyValueFactory property="year" />
-                  </cellValueFactory>
-              </TableColumn>
-              <TableColumn prefWidth="80" text="Seats">
-                  <cellValueFactory><PropertyValueFactory property="numberOfSeats" />
-                  </cellValueFactory>
-              </TableColumn>
-              <TableColumn prefWidth="80" text="Gearbox">
-                  <cellValueFactory><PropertyValueFactory property="typeOfGearbox" />
-                  </cellValueFactory>
-              </TableColumn>
-              <TableColumn prefWidth="80" text="Fuel">
-                  <cellValueFactory><PropertyValueFactory property="typeOfFuel" />
-                  </cellValueFactory>
-              </TableColumn>
-              <TableColumn prefWidth="80" text="License Plate">
-                  <cellValueFactory><PropertyValueFactory property="licensePlate" />
-                  </cellValueFactory>
-              </TableColumn>
-              <TableColumn prefWidth="80" text="EnginePower">
-                  <cellValueFactory><PropertyValueFactory property="enginesPower" />
-                  </cellValueFactory>
-              </TableColumn>
-              <TableColumn prefWidth="80" text="Price">
-                  <cellValueFactory><PropertyValueFactory property="price" />
-                  </cellValueFactory>
-              </TableColumn>
-          </columns>
-      </TableView>
-      <Label layoutX="25.0" layoutY="52.0" prefHeight="17.0" prefWidth="131.0" text="List of all vehicles" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="50.0" />
-      <Button layoutX="472.0" layoutY="346.0" mnemonicParsing="false" onAction="#onMenuButton" text="Back to MENU" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="30.0" />
-   </children>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.ListOfVehiclesView.ListOfVehiclesViewController">
+    <children>
+        <Button layoutX="352.0" layoutY="346.0" mnemonicParsing="false" onAction="#onAddVehicleButton" text="Add new vehicle" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="140.0" />
+        <Label layoutX="25.0" layoutY="31.0" text="Vehicles" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="30.0">
+            <font>
+                <Font name="System Bold" size="17.0" />
+            </font>
+        </Label>
+        <Label layoutX="25.0" layoutY="52.0" prefHeight="17.0" prefWidth="131.0" text="List of all vehicles" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="50.0" />
+        <Button layoutX="472.0" layoutY="346.0" mnemonicParsing="false" onAction="#onMenuButton" text="Back to MENU" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="30.0" />
+        <ListView fx:id="listView" layoutX="6.0" layoutY="73.0" prefHeight="275.0" prefWidth="588.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="75.0" />
+    </children>
 </AnchorPane>
