--- a/src/Client/Views/ListOfVehiclesView/VehicleListView.fxml
+++ b/src/Client/Views/ListOfVehiclesView/VehicleListView.fxml
@@ -3,19 +3,21 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.ListOfVehiclesView.ListOfVehiclesViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.ListOfVehiclesView.ListOfVehiclesViewController">
     <children>
         <Button layoutX="352.0" layoutY="346.0" mnemonicParsing="false" onAction="#onAddVehicleButton" text="Add new vehicle" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="140.0" />
-        <Label layoutX="25.0" layoutY="31.0" text="Vehicles" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="30.0">
+        <Label layoutX="126.0" layoutY="27.0" text="Vehicles" AnchorPane.leftAnchor="126.0" AnchorPane.topAnchor="27.0">
             <font>
                 <Font name="System Bold" size="17.0" />
             </font>
         </Label>
-        <Label layoutX="25.0" layoutY="52.0" prefHeight="17.0" prefWidth="131.0" text="List of all vehicles" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="50.0" />
+        <Label layoutX="126.0" layoutY="49.0" prefHeight="17.0" prefWidth="131.0" text="List of all vehicles" AnchorPane.leftAnchor="126.0" AnchorPane.topAnchor="49.0" />
         <Button layoutX="472.0" layoutY="346.0" mnemonicParsing="false" onAction="#onMenuButton" text="Back to MENU" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="30.0" />
         <ListView fx:id="listView" layoutX="6.0" layoutY="73.0" prefHeight="275.0" prefWidth="588.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="75.0" />
+      <ImageView fx:id="logoLabel" fitHeight="52.2" fitWidth="101.8" layoutX="15.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true" />
     </children>
 </AnchorPane>
