--- a/src/Client/Views/AddBookingCustomerView/AddBookingCustomerView.fxml
+++ b/src/Client/Views/AddBookingCustomerView/AddBookingCustomerView.fxml
@@ -11,7 +11,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.AddBookingCustomerView.AddBookingCustomerViewController">
     <children>
-        <Button layoutX="462.0" layoutY="346.0" mnemonicParsing="false" text="Back to MENU" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="30.0" />
+        <Button layoutX="462.0" layoutY="346.0" mnemonicParsing="false" onAction="#onMainMenuButton" text="Back to MENU" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="30.0" />
         <Label layoutX="25.0" layoutY="31.0" text="Create a booking" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="30.0">
             <font>
                 <Font name="System Bold" size="17.0" />
