--- a/src/Client/Views/MenuCustomerView/MenuCustomerView.fxml
+++ b/src/Client/Views/MenuCustomerView/MenuCustomerView.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.MenuCustomerView.MenuCustomerViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.MenuCustomerView.MenuCustomerViewController">
    <children>
       <Label alignment="CENTER" layoutX="133.0" layoutY="33.0" prefHeight="48.0" prefWidth="356.0" text="Rent4U" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0">
          <font>
@@ -13,9 +13,10 @@
          </font>
       </Label>
       <Button fx:id="openAddVehicleButton" layoutX="192.0" layoutY="120.0" mnemonicParsing="false" onAction="#onCreateBooking" prefHeight="40.0" prefWidth="217.0" text="CREATE A BOOKING" AnchorPane.leftAnchor="192.0" AnchorPane.topAnchor="120.0" />
-      <Label alignment="CENTER" layoutX="270.0" layoutY="81.0" text="Welcome Name Surname..." AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="80.0" />
+      <Label alignment="CENTER" layoutX="221.0" layoutY="84.0" prefHeight="17.0" prefWidth="60.0" text="Welcome" AnchorPane.leftAnchor="221.0" AnchorPane.rightAnchor="311.0" AnchorPane.topAnchor="84.0" />
       <Button fx:id="openLogOutButton" layoutX="238.0" layoutY="359.0" mnemonicParsing="false" onAction="#onLogOutButton" prefHeight="27.0" prefWidth="127.0" text="LOG OUT" AnchorPane.leftAnchor="238.0" AnchorPane.topAnchor="360.0" />
       <Button fx:id="listOfVehicleButton" layoutX="192.0" layoutY="170.0" mnemonicParsing="false" onAction="#onMyBooking" prefHeight="40.0" prefWidth="217.0" text="MY BOOKINGS" AnchorPane.leftAnchor="192.0" AnchorPane.topAnchor="170.0" />
       <Button layoutX="192.0" layoutY="220.0" mnemonicParsing="false" onAction="#onMyAccount" prefHeight="40.0" prefWidth="217.0" text="MY ACCOUNT" AnchorPane.leftAnchor="192.0" AnchorPane.topAnchor="220.0" />
+      <Label fx:id="nameLabel" layoutX="289.0" layoutY="84.0" prefHeight="17.0" prefWidth="107.0" text="name" AnchorPane.leftAnchor="289.0" AnchorPane.topAnchor="84.0" />
    </children>
 </AnchorPane>
